# liballocate

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
liballocate/: __init__.py  liballocate.py
liballocate/allocators/: allocator.py  ptmalloc2_allocator.py
liballocate/allocators/custom/: custom_allocator.py
liballocate/allocators/ptmalloc2/: chunk_accessor.py  constants.py  fastbin.py  fastbin_entry.py  heap_chunk.py  ptmalloc2_allocator.py  tcache.py  tcache_entry.py  unsortedbin.py  unsortedbin_entry.py
liballocate/clibs/: clib.py  clib_identifier.py  glibc.py
liballocate/data/: constrained_memory_view.py  memory_area.py  mmapped_file.py
liballocate/liblog/: liblog_decoration.py
liballocate/utils/: c_struct_provider.py  c_structs.json  elf_info.py  resolve_clib_utilities.py  version_str.py
test/: .gdb_history  setup_liballocate.py
