[project]
name = "liballocate"
version = "0.1.0"
description = "A libdebug extension for the dynamic allocator"
authors = [
    { name = "Frank01001" },
    { name = "MrIndeciso" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["libdebug", "allocator", "dynamic", "extension"]

# Define the dependencies directly under [project], not [project.urls]
dependencies = [
    "libdebug",
    "libdestruct"
]

[project.urls]
homepage = "https://github.com/libdebug/libdebug"

[tool.setuptools.packages.find]
include = ["liballocate", "liballocate.*"]
